# comp0034-tutorialapp-dash

./: .gitignore  README.md  pyproject.toml
src/data/: paralympics.db
src/paralympics/: app.py  app2.py  charts.py
tests/: conftest.py  test_paralympics.py  test_paralympics_selenium.py
